@@ -7,6 +7,7 @@ package com.shtrih.jpos.fiscalprinter.receipt;
 /**
  * @author V.Kravtsov
  */
+
 import com.shtrih.barcode.PrinterBarcode;
 
 import java.util.Vector;
@@ -36,8 +37,10 @@ import com.shtrih.fiscalprinter.command.TLVList;
 import com.shtrih.jpos.fiscalprinter.SmFptrConst;
 import com.shtrih.jpos.fiscalprinter.receipt.template.TemplateLine;
 import com.shtrih.fiscalprinter.command.TextLine;
+
 import java.util.Vector;
 
+import static com.shtrih.fiscalprinter.command.PrinterConst.SMFP_STATION_REC;
 import static jpos.FiscalPrinterConst.FPTR_PS_FISCAL_RECEIPT_ENDING;
 
 public class FSSalesReceipt extends CustomReceipt implements FiscalReceipt {
@@ -112,9 +115,8 @@ public class FSSalesReceipt extends CustomReceipt implements FiscalReceipt {
     public void openReceipt(boolean isSale) throws Exception {
         if (!isOpened) {
             isOpened = true;
-            if (!isSale)
-            {
-                if (receiptType == PrinterConst.SMFP_RECTYPE_SALE){
+            if (!isSale) {
+                if (receiptType == PrinterConst.SMFP_RECTYPE_SALE) {
                     receiptType = PrinterConst.SMFP_RECTYPE_BUY;
                 }
             }
@@ -124,7 +126,7 @@ public class FSSalesReceipt extends CustomReceipt implements FiscalReceipt {
     }
 
     public void printRecItem(String description, long price, int quantity,
-            int vatInfo, long unitPrice, String unitName) throws Exception {
+                             int vatInfo, long unitPrice, String unitName) throws Exception {
         openReceipt(true);
         printSale(price, quantity, unitPrice, getParams().department,
                 vatInfo, description, unitName);
@@ -401,17 +403,17 @@ public class FSSalesReceipt extends CustomReceipt implements FiscalReceipt {
         getDevice().fsReceiptDiscount(item);
     }
 
-    public void printFSText(FSTextReceiptItem item) throws Exception {
+    private void printFSText(FSTextReceiptItem item) throws Exception {
         if (!item.preLine.isEmpty()) {
-            getDevice().printText(item.preLine);
+            getDevice().printText(SMFP_STATION_REC, item.preLine, item.font);
         }
 
         if (!item.text.isEmpty()) {
-            getDevice().printText(item.text);
+            getDevice().printText(SMFP_STATION_REC, item.text, item.font);
         }
 
         if (!item.postLine.isEmpty()) {
-            getDevice().printText(item.postLine);
+            getDevice().printText(SMFP_STATION_REC, item.postLine, item.font);
         }
     }
 
@@ -441,22 +443,20 @@ public class FSSalesReceipt extends CustomReceipt implements FiscalReceipt {
         }
 
         PriceItem priceItem = item.getPriceItem();
-        if (!item.getIsStorno()) 
-        {
-            switch (receiptType)
-            { 
+        if (!item.getIsStorno()) {
+            switch (receiptType) {
                 case PrinterConst.SMFP_RECTYPE_SALE:
                     getDevice().printSale(priceItem);
                     break;
-                    
+
                 case PrinterConst.SMFP_RECTYPE_RETSALE:
                     getDevice().printVoidSale(priceItem);
                     break;
-                    
+
                 case PrinterConst.SMFP_RECTYPE_BUY:
                     getDevice().printRefund(priceItem);
                     break;
-                    
+
                 case PrinterConst.SMFP_RECTYPE_RETBUY:
                     getDevice().printVoidRefund(priceItem);
                     break;
@@ -482,11 +482,8 @@ public class FSSalesReceipt extends CustomReceipt implements FiscalReceipt {
                 description, "");
     }
 
-    public void addTextItem(String text) throws Exception {
-        FSTextReceiptItem item = new FSTextReceiptItem();
-        item.text = text;
-        item.preLine = getPreLine();
-        item.postLine = getPostLine();
+    private void addTextItem(String text, FontNumber font) throws Exception {
+        FSTextReceiptItem item = new FSTextReceiptItem(text, getPreLine(), getPostLine(), font);
         if (getContext().getPrinterState().getValue() == FiscalPrinterConst.FPTR_PS_FISCAL_RECEIPT_ENDING) {
             endingItems.add(item);
         } else {
@@ -494,15 +491,19 @@ public class FSSalesReceipt extends CustomReceipt implements FiscalReceipt {
         }
     }
 
+    private void addTextItem(String text) throws Exception {
+        addTextItem(text, getParams().getFont());
+    }
+
     public void printRecTotal(long total, long payment, long payType,
-            String description) throws Exception {
+                              String description) throws Exception {
         checkTotal(getSubtotal(), total);
         addPayment(payment, payType);
         clearPrePostLine();
     }
 
     public void printRecItemVoid(String description, long price, int quantity,
-            int vatInfo, long unitPrice, String unitName) throws Exception {
+                                 int vatInfo, long unitPrice, String unitName) throws Exception {
         openReceipt(false);
 
         if (isSaleReceipt()) {
@@ -555,7 +556,7 @@ public class FSSalesReceipt extends CustomReceipt implements FiscalReceipt {
     }
 
     public void printRecItemAdjustment(int adjustmentType, String description,
-            long amount, int vatInfo) throws Exception {
+                                       long amount, int vatInfo) throws Exception {
         checkDiscountsEnabled();
         switch (adjustmentType) {
             case FiscalPrinterConst.FPTR_AT_AMOUNT_DISCOUNT:
@@ -579,12 +580,12 @@ public class FSSalesReceipt extends CustomReceipt implements FiscalReceipt {
             default:
                 throw new JposException(JposConst.JPOS_E_ILLEGAL,
                         Localizer.getString(Localizer.invalidParameterValue)
-                        + "adjustmentType");
+                                + "adjustmentType");
         }
     }
 
     public void printRecSubtotalAdjustment(int adjustmentType,
-            String description, long amount) throws Exception {
+                                           String description, long amount) throws Exception {
         checkDiscountsEnabled();
         checkAdjustment(adjustmentType, amount);
         switch (adjustmentType) {
@@ -609,12 +610,12 @@ public class FSSalesReceipt extends CustomReceipt implements FiscalReceipt {
             default:
                 throw new JposException(JposConst.JPOS_E_ILLEGAL,
                         Localizer.getString(Localizer.invalidParameterValue)
-                        + "AdjustmentType");
+                                + "AdjustmentType");
         }
     }
 
     public void printRecVoidItem(String description, long amount, int quantity,
-            int adjustmentType, long adjustment, int vatInfo) throws Exception {
+                                 int adjustmentType, long adjustment, int vatInfo) throws Exception {
         openReceipt(false);
         long total = Math.round(amount * quantity / 1000.0);
         if (isSaleReceipt()) {
@@ -636,17 +637,17 @@ public class FSSalesReceipt extends CustomReceipt implements FiscalReceipt {
     }
 
     public void printRecPackageAdjustment(int adjustmentType,
-            String description, String vatAdjustment) throws Exception {
+                                          String description, String vatAdjustment) throws Exception {
         printRecPackageAdjustment2(adjustmentType, vatAdjustment, 1);
     }
 
     public void printRecPackageAdjustVoid(int adjustmentType,
-            String vatAdjustment) throws Exception {
+                                          String vatAdjustment) throws Exception {
         printRecPackageAdjustment2(adjustmentType, vatAdjustment, -1);
     }
 
     public void printRecPackageAdjustment2(int adjustmentType,
-            String vatAdjustment, int factor) throws Exception {
+                                           String vatAdjustment, int factor) throws Exception {
         checkDiscountsEnabled();
         PackageAdjustments adjustments = new PackageAdjustments();
         adjustments.parse(vatAdjustment);
@@ -681,7 +682,7 @@ public class FSSalesReceipt extends CustomReceipt implements FiscalReceipt {
             default:
                 throw new JposException(JposConst.JPOS_E_ILLEGAL,
                         Localizer.getString(Localizer.invalidParameterValue)
-                        + "adjustmentType");
+                                + "adjustmentType");
         }
     }
 
@@ -712,12 +713,12 @@ public class FSSalesReceipt extends CustomReceipt implements FiscalReceipt {
             default:
                 throw new JposException(JposConst.JPOS_E_ILLEGAL,
                         Localizer.getString(Localizer.invalidParameterValue)
-                        + "adjustmentType");
+                                + "adjustmentType");
         }
     }
 
     public void printRecItemAdjustmentVoid(int adjustmentType,
-            String description, long amount, int vatInfo) throws Exception {
+                                           String description, long amount, int vatInfo) throws Exception {
         checkDiscountsEnabled();
         checkAdjustment(adjustmentType, amount);
         switch (adjustmentType) {
@@ -742,12 +743,12 @@ public class FSSalesReceipt extends CustomReceipt implements FiscalReceipt {
             default:
                 throw new JposException(JposConst.JPOS_E_ILLEGAL,
                         Localizer.getString(Localizer.invalidParameterValue)
-                        + "adjustmentType");
+                                + "adjustmentType");
         }
     }
 
     public void printRecItemRefund(String description, long amount,
-            int quantity, int vatInfo, long unitAmount, String unitName)
+                                   int quantity, int vatInfo, long unitAmount, String unitName)
             throws Exception {
         openReceipt(false);
         printSale(amount, quantity, unitAmount, getParams().department, vatInfo,
@@ -756,7 +757,7 @@ public class FSSalesReceipt extends CustomReceipt implements FiscalReceipt {
     }
 
     public void printRecItemRefundVoid(String description, long amount,
-            int quantity, int vatInfo, long unitAmount, String unitName)
+                                       int quantity, int vatInfo, long unitAmount, String unitName)
             throws Exception {
         openReceipt(true);
         printStorno(amount, quantity, unitAmount, getParams().department, vatInfo,
@@ -807,13 +808,12 @@ public class FSSalesReceipt extends CustomReceipt implements FiscalReceipt {
         logger.debug("Add amount: " + amount + ", total: " + total);
     }
 
-    public long correctQuantity(long price, long quantity, long unitPrice) 
-    {
-        if (!getParams().quantityCorrectionEnabled){
-            return quantity; 
+    public long correctQuantity(long price, long quantity, long unitPrice) {
+        if (!getParams().quantityCorrectionEnabled) {
+            return quantity;
         }
-        
-        for (;;) {
+
+        for (; ; ) {
             double d = unitPrice * quantity;
             long amount = MathUtils.round(d / 1000.0);
             if (amount >= price) {
@@ -825,7 +825,7 @@ public class FSSalesReceipt extends CustomReceipt implements FiscalReceipt {
     }
 
     public void printStorno(long price, long quantity, long unitPrice,
-            int department, int vatInfo, String description) throws Exception {
+                            int department, int vatInfo, String description) throws Exception {
         if (unitPrice == 0) {
             if (price != 0) {
                 quantity = 1000;
@@ -839,8 +839,8 @@ public class FSSalesReceipt extends CustomReceipt implements FiscalReceipt {
     }
 
     public void printSale(long price, long quantity, long unitPrice,
-            int department, int vatInfo, String description,
-            String unitName) throws Exception {
+                          int department, int vatInfo, String description,
+                          String unitName) throws Exception {
         if (unitPrice == 0) {
             if (price != 0) {
                 quantity = 1000;
@@ -855,15 +855,15 @@ public class FSSalesReceipt extends CustomReceipt implements FiscalReceipt {
     }
 
     public void doPrintSale(long price, long quantity, long unitPrice,
-            int department, int vatInfo, String description, String unitName,
-            boolean isStorno) throws Exception {
+                            int department, int vatInfo, String description, String unitName,
+                            boolean isStorno) throws Exception {
         logger.debug(
                 "price: " + price
-                + ", quantity: " + quantity
-                + ", unitPrice: " + unitPrice);
+                        + ", quantity: " + quantity
+                        + ", unitPrice: " + unitPrice);
 
         double d = unitPrice * Math.abs(quantity);
-        long amount = getParams().itemTotalAmount == null ?  MathUtils.round((d / 1000.0)) : getParams().itemTotalAmount;
+        long amount = getParams().itemTotalAmount == null ? MathUtils.round((d / 1000.0)) : getParams().itemTotalAmount;
 
         /*
          if (isStorno) {
@@ -916,7 +916,7 @@ public class FSSalesReceipt extends CustomReceipt implements FiscalReceipt {
             
             item.setTotalAmount(getParams().itemTotalAmount);
             getParams().itemTotalAmount = null;
-            
+
             items.add(item);
             recItems.add(item);
 
@@ -1068,12 +1068,12 @@ public class FSSalesReceipt extends CustomReceipt implements FiscalReceipt {
             default:
                 throw new JposException(JposConst.JPOS_E_ILLEGAL,
                         Localizer.getString(Localizer.invalidParameterValue)
-                        + "adjustmentType");
+                                + "adjustmentType");
         }
     }
 
     private void checkAdjustments(int adjustmentType,
-            PackageAdjustments adjustments) throws Exception {
+                                  PackageAdjustments adjustments) throws Exception {
         PackageAdjustment adjustment;
         for (int i = 0; i < adjustments.size(); i++) {
             adjustment = adjustments.getItem(i);
@@ -1197,5 +1197,5 @@ public class FSSalesReceipt extends CustomReceipt implements FiscalReceipt {
     public void printGraphics(PrinterGraphics graphics) throws Exception {
         items.add(graphics);
     }
-    
+
 }
