@@ -5,16 +5,24 @@
  */
 package com.shtrih.jpos.fiscalprinter.receipt;
 
+import com.shtrih.fiscalprinter.FontNumber;
+
 /**
  *
  * @author Kravtsov
  */
 public class FSTextReceiptItem {
-    
-    public FSTextReceiptItem(){
+
+    public final String text;
+    public final String preLine;
+    public final String postLine;
+    public final FontNumber font;
+
+    public FSTextReceiptItem(String text, String preLine, String postLine, FontNumber font){
+
+        this.text = text;
+        this.preLine = preLine;
+        this.postLine = postLine;
+        this.font = font;
     }
-    
-    public String text = "";
-    public String preLine = "";
-    public String postLine = "";
 }
